Avoid creation of new objects.